feat (AboutUsViewMode) 添加版本日志界面

--- a/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
@@ -35,6 +35,7 @@
     <string name="fragment_mine_about_us_join_community_waiting_join" tools:ignore="ResourceName">Wait For You～</string>
     <string name="fragment_mine_about_us_privacy_policy_url">file:///android_asset/PRIVACY POLICY.html</string>
     <string name="fragment_mine_about_us_terms_of_service_url">file:///android_asset/Terms of Service.html</string>
+    <string name="fragment_mine_about_us_version_log_url">file:///android_asset/VersionLog.html</string>
 
 
     <string name="module_mine_modify_password_new">Reset</string>
