--- a/BCX_Wallet/module_mine/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="fragment_mine_about_us_join_community_waiting_join">等你来撩～</string>
     <string name="fragment_mine_about_us_privacy_policy_url">file:///android_asset/PRIVACY POLICY.html</string>
     <string name="fragment_mine_about_us_terms_of_service_url">file:///android_asset/Terms of Service.html</string>
+    <string name="fragment_mine_about_us_version_log_url">file:///android_asset/VersionLog.html</string>
 
 
     <string name="module_mine_response_error">数据错误</string>
