feat (update) v-1.0.4 版本更新内容

--- a/BCX_Wallet/library_base/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_base/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="module_asset_downloading">正在下载…</string>
     <string name="module_asset_download_failed">下载失败！</string>
     <string name="operate_failed">操作失败</string>
+    <string name="secret_free_tip">退出DApp前不用再次确认</string>
 </resources>
