--- a/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
@@ -65,4 +65,5 @@
     <string name="module_asset_wrong_password">Wrong password</string>
     <string name="module_asset_private_key_author_failed">Owner key cannot transfer,Please import active key</string>
     <string name="module_asset_contract_not_found">contract not found</string>
+    <string name="module_asset_data_cast_error">class cast exception</string>
 </resources>
