--- a/BCX_Wallet/module_asset/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="module_asset_wrong_password">密码不正确</string>
     <string name="module_asset_private_key_author_failed">owner key不能进行转账，请导入active key</string>
     <string name="module_asset_contract_not_found">未查找到交易合约信息</string>
+    <string name="module_asset_data_cast_error">数据类型转换异常</string>
 </resources>
