--- a/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
@@ -2,7 +2,7 @@
     <string name="module_asset_transfer_token">Send</string>
     <string name="module_asset_receivables_token">Receive</string>
     <string name="module_asset_props_assets">Prop</string>
-    <string name="module_asset_message_center">Message</string>
+    <string name="module_asset_message_center">Orders</string>
     <string name="module_asset_owner_assets_text">My Assets</string>
     <string name="module_asset_transfer_title">Send</string>
     <string name="module_asset_receivable_account">Address</string>
@@ -62,4 +62,14 @@
     <string name="module_asset_account_not_found">Account does not exist</string>
     <string name="module_asset_wrong_password">Wrong password</string>
     <string name="module_asset_private_key_author_failed">Owner key cannot transfer,Please import active key</string>
+    <string name="module_asset_nh_order_mine_title">我的订单</string>
+    <string name="module_asset_nh_order_all_title">全网订单</string>
+    <string name="module_asset_nh_order_id">订单ID：</string>
+    <string name="module_asset_nh_order_price">价格：</string>
+    <string name="module_asset_nh_asset_order_id">资产ID：</string>
+    <string name="module_asset_nh_asset_order_memo">备注：</string>
+    <string name="cancel_mine_nh_order_text">取消订单</string>
+    <string name="module_asset_nh_asset_order_seller">卖家：</string>
+    <string name="buy_nh_order_text">购买</string>
+    <string name="order_manage_title">订单管理</string>
 </resources>
