--- a/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
@@ -56,7 +56,7 @@
     <string name="module_asset_contract_action">Action：</string>
     <string name="module_asset_contract_params">Data：</string>
     <string name="module_asset_transfer_nh_title">NH Asset Transfer</string>
-    <string name="module_asset_nh_asset_id">NHAsset ID:</string>
+    <string name="module_asset_nh_asset_id">NHAsset ID：</string>
     <string name="no_asset_data">No Data</string>
     <string name="module_asset_transfer_amount_empty">Please enter the amount to be transferred</string>
     <string name="module_asset_account_not_found">Account does not exist</string>
