--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="account_private_key_detail" tools:ignore="ResourceName">账户权限(owner) 账户权限设定谁可以控制本账户。控制人（账户名或公钥）可修改账户相关的各种设置，包括权限设置。</string>
     <string name="private_key_function_tips">私钥用于恢复钱包或重置钱包密码，长按复制，并将它存放在只有您知道的安全地方</string>
     <string name="module_asset_coin_type_test">(测试)</string>
+    <string name="deal_detail">交易详情</string>
 </resources>
