--- a/BCX_Wallet/module_mine/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/strings.xml
@@ -141,5 +141,15 @@
     <string name="module_mine_nh_asset_id">资产ID</string>
     <string name="module_mine_asset_delete_confirm">确认删除</string>
     <string name="module_mine_delete_nh_asset_success">删除成功</string>
+    <string name="module_mine_nh_transfer_title">道具转移</string>
+    <string name="module_mine_nh_asset_transfer_receiver_hint">请输入资产接收方</string>
+    <string name="module_mine_nh_asset_transfer_id">NH资产ID</string>
+    <string name="module_mine_nh_asset_transfer_receiver">资产接收方</string>
+    <string name="module_mine_transfer_nh_info">转移</string>
+    <string name="module_mine_nh_asset_transfer_from">发送发</string>
+    <string name="module_mine_nh_asset_transfer_to">接收方</string>
+    <string name="module_mine_transfer_nh_confirm_btn">确认转移</string>
+    <string name="module_mine_nh_receiver_can_not_be_empty">资产接收方不能为空</string>
+    <string name="module_mine_transfer_nh_asset_success">转移成功</string>
 
 </resources>
