--- a/BCX_Wallet/module_asset/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="module_asset_nh_asset_order_memo">备注：</string>
     <string name="cancel_mine_nh_order_text">取消订单</string>
     <string name="module_asset_nh_asset_order_seller">卖家：</string>
-    <string name="buy_nh_order_text">购买</string>
+    <string name="buy_nh_order_text">购买资产</string>
     <string name="order_manage_title">订单管理</string>
     <string name="module_asset_nh_order_detail_title">订单详情</string>
     <string name="module_asset_nh_order_detail_order_id">订单ID</string>
@@ -87,4 +87,5 @@
     <string name="module_asset_order_buy_success">购买成功</string>
     <string name="module_asset_can_not_buy_owner_order">不能购买自己创建的订单</string>
     <string name="no_asset_order">暂无订单</string>
+    <string name="module_asset_buy_nh_asset_id">NH资产ID</string>
 </resources>
