--- a/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
@@ -88,4 +88,5 @@
     <string name="module_asset_can_not_buy_owner_order">不能购买自己创建的订单</string>
     <string name="no_asset_order">暂无订单</string>
     <string name="module_asset_buy_nh_asset_id">NH资产ID</string>
+    <string name="buy_nh_order_btn_text">购买</string>
 </resources>
