--- a/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
@@ -14,4 +14,5 @@
     <string name="module_asset_coin_type_test">(TEST)</string>
     <string name="deal_detail">Deal Detail</string>
     <string name="next_text">Next</string>
+    <string name="insufficient_balance">余额不足</string>
 </resources>
