--- a/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
@@ -113,7 +113,7 @@
     <string name="module_mine_nh_asset_zone_data">域数据：</string>
     <string name="module_mine_nh_asset_detail_transfer_text">转移</string>
     <string name="module_mine_nh_asset_sale_text">出售</string>
-    <string name="module_mine_nh_sale_title">道具出售</string>
+    <string name="module_mine_nh_sale_title">非同质资产出售</string>
     <string name="module_mine_nh_sale_next">下一步</string>
     <string name="module_mine_nh_asset_sale_id">NH资产ID</string>
     <string name="module_mine_nh_asset_sale_price">价格</string>
@@ -141,7 +141,7 @@
     <string name="delete_nh_asset_text">删除资产</string>
     <string name="module_mine_asset_delete_confirm">确认删除</string>
     <string name="module_mine_delete_nh_asset_success">删除成功</string>
-    <string name="module_mine_nh_transfer_title">道具转移</string>
+    <string name="module_mine_nh_transfer_title">非同质资产转移</string>
     <string name="module_mine_nh_asset_transfer_receiver_hint">请输入资产接收方</string>
     <string name="module_mine_nh_asset_transfer_id">NH资产ID</string>
     <string name="module_mine_nh_asset_transfer_receiver">资产接收方</string>
