fix (all) fix time from 12 hours to 24 hours

--- a/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
@@ -154,6 +154,8 @@
     <string name="module_mine_receivable_account_name">转入账号</string>
     <string name="module_mine_transfer_account_name">转出账号</string>
     <string name="module_mine_nh_asset_sale_valid_time_less_than_one">请输入合理的有效时间</string>
+    <string name="module_mine_nh_receiver_can_not_be_self">资产接收方不能是自己</string>
+    <string name="module_mine_nh_asset_sale_memo_illegal">memo仅支持英文字符</string>
 
 
 </resources>
