--- a/BCX_Wallet/module_asset/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values/strings.xml
@@ -87,5 +87,5 @@
     <string name="module_asset_buy_nh_asset_id">NH资产ID</string>
     <string name="buy_nh_order_btn_text">购买</string>
     <string name="cancel_mine_nh_order_text">取消订单</string>
-    <string name="module_asset_order_not_exist">订单已失效</string>
+    <string name="module_asset_order_not_exist">订单已过期</string>
 </resources>
