--- a/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
@@ -96,65 +96,57 @@
     <string name="module_mine_wrong_password">Wrong password</string>
     <string name="module_mine_node_connect_failed">Connect failed</string>
     <string name="module_mine_node_connect_success">Connect success</string>
-    <string name="mine_nh_asset_id_text">资产ID：</string>
-    <string name="mine_nh_asset_qualifier">通行资产：</string>
-    <string name="mine_nh_asset_world_view">世界观：</string>
-    <string name="delete_text">删除</string>
-    <string name="module_mine_nh_asset_detail_title">资产详情</string>
-    <string name="module_asset_nh_asset_detail_id">NH资产ID</string>
-    <string name="module_mine_nh_asset_creator">创建者：</string>
-    <string name="module_mine_nh_asset_owner">持有者：</string>
-    <string name="module_mine_asset_detail_asset_qualifier">通行资产：</string>
-    <string name="module_mine_asset_detail_world_view">世界观：</string>
-    <string name="module_mine_asset_create_time">创建时间：</string>
-    <string name="module_mine_nh_asset_base_desc">基础数据：</string>
-    <string name="module_mine_nh_asset_zone_data">域数据：</string>
-    <string name="module_mine_nh_asset_detail_transfer_text">转移</string>
-    <string name="module_mine_nh_asset_sale_text">出售</string>
-    <string name="module_mine_nh_sale_title">非同质资产出售</string>
-    <string name="module_mine_nh_sale_next">下一步</string>
-    <string name="module_mine_nh_asset_sale_id">NH资产ID</string>
-    <string name="module_mine_nh_asset_sale_price">价格</string>
-    <string name="choose_other_symbol">选择币种</string>
-    <string name="module_mine_nh_asset_sale_price_default">(默认币种：COCOS)</string>
-    <string name="module_mine_nh_asset_sale_valid_time">有效时间</string>
-    <string name="module_mine_nh_asset_sale_valid_time_hint">请输入挂卖订单的有效时间</string>
-    <string name="module_mine_nh_asset_sale_memo">备注</string>
-    <string name="module_mine_nh_asset_sale_memo_hint">请输入挂单备注</string>
-    <string name="module_mine_nh_asset_sale_price_hint">请输入挂单价格</string>
-    <string name="module_mine_nh_asset_sale_valid_time_default">（单位：秒）</string>
-    <string name="module_mine_nh_asset_sale_memo_default">(选填)</string>
-    <string name="module_mine_sale_nh_price_error">挂单价格不能小于0</string>
-    <string name="module_mine_nh_asset_sale_fee">挂单费用</string>
-    <string name="module_mine_nh_asset_sale_fee_default">(单位：COCOS)</string>
-    <string name="module_mine_nh_asset_sale_fee_hint">请输入挂单费用</string>
-    <string name="module_mine_sale_nh_info">出售资产</string>
-    <string name="module_mine_sale_info">交易信息</string>
-    <string name="module_mine_nh_asset_sale_miner_fee">矿工费</string>
-    <string name="module_mine_sale_nh_confirm_btn">确认出售</string>
-    <string name="module_mine_sale_nh_success">挂单成功</string>
-    <string name="module_mine_coin_select_title">选择币种</string>
-    <string name="module_mine_detele_nh_asset_tip">注意：资产删除后不可恢复</string>
-    <string name="module_asset_deal_info">交易信息</string>
-    <string name="delete_nh_asset_text">删除资产</string>
-    <string name="module_mine_asset_delete_confirm">确认删除</string>
-    <string name="module_mine_delete_nh_asset_success">删除成功</string>
-    <string name="module_mine_nh_transfer_title">非同质资产转移</string>
-    <string name="module_mine_nh_asset_transfer_receiver_hint">请输入资产接收方</string>
-    <string name="module_mine_nh_asset_transfer_id">NH资产ID</string>
-    <string name="module_mine_nh_asset_transfer_receiver">资产接收方</string>
-    <string name="module_mine_transfer_nh_info">转移资产</string>
-    <string name="module_mine_nh_asset_transfer_from">发送发</string>
-    <string name="module_mine_nh_asset_transfer_to">接收方</string>
-    <string name="module_mine_transfer_nh_confirm_btn">确认转移</string>
-    <string name="module_mine_nh_receiver_can_not_be_empty">资产接收方不能为空</string>
-    <string name="module_mine_transfer_nh_asset_success">转移成功</string>
-    <string name="module_mine_receivable_account_name">转入账号</string>
-    <string name="module_mine_transfer_account_name">转出账号</string>
-    <string name="module_mine_nh_asset_sale_valid_time_less_than_one">请输入合理的有效时间</string>
-    <string name="module_mine_nh_receiver_can_not_be_self">资产接收方不能是自己</string>
-    <string name="module_mine_nh_asset_sale_memo_illegal">备注仅支持英文字符</string>
-    <string name="module_mine_nh_asset_sale_valid_time_max">最大 </string>
+    <string name="mine_nh_asset_id_text">Asset ID：</string>
+    <string name="mine_nh_asset_qualifier">Coin：</string>
+    <string name="mine_nh_asset_world_view">Worldview：</string>
+    <string name="delete_text">Delete</string>
+    <string name="module_mine_nh_asset_detail_title">Assets Detail</string>
+    <string name="module_asset_nh_asset_detail_id">NH Asset ID</string>
+    <string name="module_mine_nh_asset_creator">Creator：</string>
+    <string name="module_mine_nh_asset_owner">Holder：</string>
+    <string name="module_mine_asset_detail_asset_qualifier">Coin：</string>
+    <string name="module_mine_asset_detail_world_view">Worldview：</string>
+    <string name="module_mine_asset_create_time">Time：</string>
+    <string name="module_mine_nh_asset_base_desc">Basic Data：</string>
+    <string name="module_mine_nh_asset_detail_transfer_text">Transfer</string>
+    <string name="module_mine_nh_asset_sale_text">Sell</string>
+    <string name="module_mine_nh_sale_title">Sell NH Assets</string>
+    <string name="module_mine_nh_sale_next">Next</string>
+    <string name="module_mine_nh_asset_sale_id">NH Asset ID</string>
+    <string name="module_mine_nh_asset_sale_price">Price</string>
+    <string name="choose_other_symbol">Choose a token</string>
+    <string name="module_mine_nh_asset_sale_price_default">(COCOS)</string>
+    <string name="module_mine_nh_asset_sale_valid_time">Expired in</string>
+    <string name="module_mine_nh_asset_sale_valid_time_hint">Input your Expired in</string>
+    <string name="module_mine_nh_asset_sale_memo">Memo</string>
+    <string name="module_mine_nh_asset_sale_memo_hint">Input your Memo</string>
+    <string name="module_mine_nh_asset_sale_price_hint">Input your price</string>
+    <string name="module_mine_nh_asset_sale_valid_time_default">（Seconds）</string>
+    <string name="module_mine_nh_asset_sale_memo_default">（Optional）</string>
+    <string name="module_mine_sale_nh_price_error">Price can not less than zero</string>
+    <string name="module_mine_sale_nh_info">Sell</string>
+    <string name="module_mine_sale_info">Order Information</string>
+    <string name="module_mine_nh_asset_sale_miner_fee">Fee</string>
+    <string name="module_mine_sale_nh_success">Order created</string>
+    <string name="module_mine_coin_select_title">Choose a token</string>
+    <string name="module_mine_detele_nh_asset_tip">Note: Deleted asset cannot be recovered</string>
+    <string name="module_asset_deal_info">Order Information</string>
+    <string name="delete_nh_asset_text">Delete Assets</string>
+    <string name="module_mine_delete_nh_asset_success">Deleted</string>
+    <string name="module_mine_nh_transfer_title">Transfer NH Assets</string>
+    <string name="module_mine_nh_asset_transfer_receiver_hint">Please enter the receiver</string>
+    <string name="module_mine_nh_asset_transfer_id">NH Asset ID</string>
+    <string name="module_mine_nh_asset_transfer_receiver">Receiver</string>
+    <string name="module_mine_transfer_nh_info">Transfer Assets</string>
+    <string name="module_mine_nh_asset_transfer_from">From</string>
+    <string name="module_mine_nh_asset_transfer_to">To</string>
+    <string name="module_mine_nh_receiver_can_not_be_empty">Receiver can not empty</string>
+    <string name="module_mine_transfer_nh_asset_success">Transferred</string>
+    <string name="module_mine_receivable_account_name">To</string>
+    <string name="module_mine_transfer_account_name">From</string>
+    <string name="module_mine_nh_asset_sale_valid_time_less_than_one">Expired time invalid</string>
+    <string name="module_mine_nh_receiver_can_not_be_self">Transfer account can not be self</string>
+    <string name="module_mine_nh_asset_sale_valid_time_max">Max </string>
 
 
 </resources>
