--- a/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
     <string name="module_asset_transfer_token">Send</string>
     <string name="module_asset_receivables_token">Receive</string>
-    <string name="module_asset_props_assets">Prop</string>
+    <string name="module_asset_props_assets">Assets</string>
     <string name="module_asset_message_center">Orders</string>
     <string name="module_asset_owner_assets_text">My Assets</string>
     <string name="module_asset_transfer_title">Send</string>
@@ -10,8 +10,8 @@
     <string name="module_asset_transfer_count">Amount</string>
     <string name="module_asset_transfer_amount">Enter amount</string>
     <string name="module_asset_transfer_all">All</string>
-    <string name="module_asset_transfer_memo">Note(Optional)</string>
-    <string name="module_asset_transfer_memo_hint">Note</string>
+    <string name="module_asset_transfer_memo">Memo(Optional)</string>
+    <string name="module_asset_transfer_memo_hint">Input Memo</string>
     <string name="module_asset_transfer_next">Next</string>
     <string name="module_asset_receivables_title">Receive</string>
     <string name="module_asset_receivable_amount_input_hint">Enter amount</string>
@@ -30,15 +30,15 @@
     <string name="module_asset_transfer_account_name">From</string>
     <string name="module_asset_receivable_account_name">To</string>
     <string name="module_asset_transfer_amount_info">Amount</string>
-    <string name="module_asset_transfer_memo_info">Note</string>
+    <string name="module_asset_transfer_memo_info">Memo</string>
     <string name="module_asset_transfer_pay_confirm_btn">Confirm Payment</string>
     <string name="module_asset_total_assets">Total Assets(¥)</string>
     <string name="module_asset_developing">To Be Expected</string>
-    <string name="module_asset_transfer_account_can_not_yourself">transfer account can not be self</string>
+    <string name="module_asset_transfer_account_can_not_yourself">Transfer account can not be self</string>
     <string name="module_asset_receivablesAccountName_empty">Address empty!</string>
     <string name="module_asset_transfer_success">Transfer completed</string>
     <string name="module_asset_account_balance_text">Balance:</string>
-    <string name="module_asset_transfer_fee_info">fee</string>
+    <string name="module_asset_transfer_fee_info">Fee</string>
     <string name="module_asset_balance_short_error">balance is not enough! fee：</string>
     <string name="create_account_title" tools:ignore="ResourceName">Create account</string>
     <string name="module_login_import_wallet" tools:ignore="ResourceName">Import account</string>
@@ -60,29 +60,29 @@
     <string name="module_asset_account_not_found">Account does not exist</string>
     <string name="module_asset_wrong_password">Wrong password</string>
     <string name="module_asset_private_key_author_failed">Owner key cannot transfer,Please import active key</string>
-    <string name="module_asset_nh_order_mine_title">我的订单</string>
-    <string name="module_asset_nh_order_all_title">全网订单</string>
-    <string name="module_asset_nh_order_id">订单ID：</string>
-    <string name="module_asset_nh_order_price">价格：</string>
-    <string name="module_asset_nh_asset_order_id">资产ID：</string>
-    <string name="module_asset_nh_asset_order_memo">备注：</string>
-    <string name="module_asset_nh_asset_order_seller">卖家：</string>
-    <string name="buy_nh_order_text">购买</string>
-    <string name="order_manage_title">订单管理</string>
-    <string name="module_asset_nh_order_detail_title">订单详情</string>
-    <string name="module_asset_nh_order_detail_order_id">订单ID</string>
-    <string name="module_asset_order_detail_asset_qualifier">通行资产：</string>
-    <string name="module_asset_order_detail_world_view">世界观：</string>
-    <string name="module_asset_order_detail_base_describe">基础数据：</string>
-    <string name="module_asset_order_detail_expiration">过期时间：</string>
-    <string name="module_asset_nh_asset_order_price">价格：</string>
-    <string name="module_asset_order_id">订单ID：</string>
-    <string name="module_asset_order_cancel_success">取消成功</string>
-    <string name="module_asset_nh_order_detail_order_price">订单价格</string>
-    <string name="module_asset_order_buy_success">购买成功</string>
-    <string name="module_asset_can_not_buy_owner_order">不能购买自己创建的订单</string>
-    <string name="module_asset_buy_nh_asset_id">NH资产ID</string>
-    <string name="buy_nh_order_btn_text">购买</string>
-    <string name="cancel_mine_nh_order_text">取消订单</string>
-    <string name="module_asset_order_not_exist">订单已过期</string>
+    <string name="module_asset_nh_order_mine_title">My Orders</string>
+    <string name="module_asset_nh_order_all_title">Total Orders</string>
+    <string name="module_asset_nh_order_id">Order ID:</string>
+    <string name="module_asset_nh_order_price">Price：</string>
+    <string name="module_asset_nh_asset_order_id">Asset ID：</string>
+    <string name="module_asset_nh_asset_order_memo">Memo：</string>
+    <string name="module_asset_nh_asset_order_seller">Seller：</string>
+    <string name="buy_nh_order_text">Buy</string>
+    <string name="order_manage_title">Orders</string>
+    <string name="module_asset_nh_order_detail_title">Order Details</string>
+    <string name="module_asset_nh_order_detail_order_id">Order ID</string>
+    <string name="module_asset_order_detail_asset_qualifier">Coin：</string>
+    <string name="module_asset_order_detail_world_view">Worldview：</string>
+    <string name="module_asset_order_detail_base_describe">Basic Data：</string>
+    <string name="module_asset_order_detail_expiration">Expired in：</string>
+    <string name="module_asset_nh_asset_order_price">Price：</string>
+    <string name="module_asset_order_id">Order ID：</string>
+    <string name="module_asset_order_cancel_success">Canceled</string>
+    <string name="module_asset_nh_order_detail_order_price">Price</string>
+    <string name="module_asset_order_buy_success">Order filled</string>
+    <string name="module_asset_can_not_buy_owner_order">You cannot fill the order created by yourself</string>
+    <string name="module_asset_buy_nh_asset_id">NH Asset ID</string>
+    <string name="buy_nh_order_btn_text">Buy</string>
+    <string name="cancel_mine_nh_order_text">Cancel</string>
+    <string name="module_asset_order_not_exist">The order has expired</string>
 </resources>
