--- a/BCX_Wallet/module_asset/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="module_asset_order_detail_asset_qualifier">通行资产：</string>
     <string name="module_asset_order_detail_world_view">世界观：</string>
     <string name="module_asset_order_detail_base_describe">基础数据：</string>
-    <string name="module_asset_order_detail_expiration">过期时间：</string>
+    <string name="module_asset_order_detail_expiration">有效时间：</string>
     <string name="module_asset_nh_asset_order_price">价格：</string>
     <string name="module_asset_order_id">订单ID：</string>
     <string name="module_asset_order_cancel_success">取消成功</string>
@@ -84,5 +84,5 @@
     <string name="module_asset_buy_nh_asset_id">NH资产ID</string>
     <string name="buy_nh_order_btn_text">购买</string>
     <string name="cancel_mine_nh_order_text">取消订单</string>
-    <string name="module_asset_order_not_exist">订单已过期</string>
+    <string name="module_asset_order_not_exist">订单已失效</string>
 </resources>
